gl33-master/src/test/deca/context/invalid/other/heritageFilsAvantMere.deca
// Test de contexte invalide : la classe fils est défini avant la classe mère

class B extends A{}

class A{}
